pamc/src/tests/sample_code/should_fail/parse/visibility/super9.ph
pub(super9) type A {}
